src/styles/index.css
:root {
    color : #969696;
}

.app > div {
    min-height: 100vh;
}

.app-header{
    top: 0;
    height: 5rem;
    width: 100%;
    padding: 1.5rem;
    display: flex;
    justify-content: center;
}

.app-header > div{
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 80rem;
}

.app-header > div a{
    top: 0;
    height: 100%;
    display: flex;
    flex-flow: column;
    justify-content: center;
}
.app-header > div a{
    text-decoration: none;
}

.page-container{
    width: 100%;
    padding: 1.5rem;
    padding-top: 1rem;
}

.time-lines-container{
    display: flex;
    overflow-x: hidden;
    overflow-y: overlay;
}

.tweet .tweet-header{
    margin-bottom:1rem;
    display: flex;
    justify-content: space-between;
}

.tweet .tweet-media-container{
    margin-bottom: 1rem;
}

.tweet .tweet-media-container img,
.tweet .tweet-media-container video{
    width: 100%;
    border-radius: 0.25rem;
}

.tweet{
    color: var(--font-color);
    margin: 1.5rem 0 1.5rem 0;
    width: 100%;
}

.tweet-hashtags-container{
    padding:0.25rem;
}

.tweet-hashtags-container span{
    font-size:0.75rem;
}

.config-page{
    display: flex;
    justify-content: center;
}

.config-page > div {
    max-width: 50rem;
    width: 100%;
}

.time-line-config{
    padding: 5px;
    color: var(--font-color);
}

.time-line-config .card {
    display: flex;
    max-width: 20.5rem;
}

.time-line-config-container{
    min-width: 18rem;
}

.time-line-config-header{
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    padding-top: 0;
}

.config-container-scroll{
    display: flex;
}

@media (max-width: 750px){
    
    body{
        overflow: hidden;
    }
    
    .tweets-container {
        max-width: 100%;
        width: 100vh;
        height: 100%;
        max-height: 100vh;
        overflow-y: overlay;
    }

    .tweet{
        min-width: 100%;
    }

    .config-container-scroll{  
        width: 100%;
        overflow-x: overlay;
    }

    .time-line-config-header.top{
        visibility: hidden;
        height: 0;
        width: 0;
    }

    .time-line-config-header.side{
        visibility: visible;
    }
}

.form-group.floating-label{
    position:relative;
    display: flex;
}

.form-group.floating-label input:placeholder-shown + label{
    font-size: 1.25rem;
    position: absolute;
    margin: 10px;
    margin-left: 17px;
}

.form-group.floating-label input:not(:placeholder-shown) + label{
    font-size: 0.75rem;
    position: absolute;
    top: 0px;
    left: 0px;
    margin: 2px;
    margin-left: 17px;
}

.form-group.floating-label input:not(:placeholder-shown){
    padding-bottom: 0px;
}

/* MINIMALIST THEME */
.minimalist .app-header{
    background: white;
}

.minimalist .app-header a button,
.minimalist .app-header a h2{
    color: #969696;
}

.minimalist .card a,
.minimalist .card{
    background: white;
    color:#969696;
}

.minimalist .card .form-group label{
    color: #969696;
}

/* OCEAN THEME */


.ocean .app-header{
    background: #107dac;
    color: white
}

.ocean .app-header a button,
.ocean .app-header a h2{
    color: white;
}

.ocean .card a,
.ocean .card{
    background: #71c7ec;
    color: white;
}

.ocean .card .form-group label{
    color: #969696;
}

/* DARK THEME */
.app > .dark{
    background: #606060;
}

.dark h3,
.dark h2{
    color: #d6d6d6;
}

.dark hr{
    background: #808080;
}

.dark .app-header{
    background: #404040;
}

.dark .app-header a button,
.dark .app-header a h2{
    color: white;
}

.dark .card a,
.dark .card{
    background: #808080;
    color: white;
}

.dark .card .form-group label{
    color: #969696;
}

